--- a/docs/style.css
+++ b/docs/style.css
@@ -107,3 +107,12 @@ footer { background: #000; padding: 20px; font-size: 0.9em; color: #aaa; }
   padding: 20px 0;
 }
 
+.brands {
+  display: flex;
+  felx-wrap: nowrap;
+  justify-content: center;
+  gap: 30px;
+  overflow-x;: auto;
+  padding: 40px 10px;
+}
+
